# trading_dashboard

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  turso_schema.sql
.claude/: settings.json  settings.local.json
.claude/hooks/: pre-commit.sh
.claude/skills/: backend-api-endpoints.md  charts-and-visualization.md  database-queries.md  frontend-components.md  styling-and-theming.md  timestamps-and-formatting.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  db.py  main.py
backend/app/models/: events.py  performance.py  system.py  trades.py
backend/app/routers/: dashboard.py  events.py  performance.py  system.py  trades.py
backend/app/services/: events.py  performance.py  system.py  trades.py
backend/scripts/: sync_to_turso.py
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/dashboard/: route.ts
frontend/src/app/api/events/: route.ts
frontend/src/app/events/: page.tsx
frontend/src/app/performance/: page.tsx
frontend/src/app/system/: page.tsx
frontend/src/app/trades/: page.tsx
frontend/src/components/charts/: equity-curve.tsx  pnl-bar-chart.tsx
frontend/src/components/layout/: mobile-nav.tsx  providers.tsx  sidebar.tsx
frontend/src/components/tables/: event-table.tsx  trade-table.tsx
frontend/src/components/ui/: badge.tsx  card.tsx  empty-state.tsx  kpi-card.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: api.ts  events.ts  formatters.ts  turso.ts  types.ts
(+11 files in other folders)
