[project]
name = "forex-dashboard-backend"
version = "0.1.0"
description = "FastAPI backend for the forex trading dashboard"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
